--- a/html-forms/index.html
+++ b/html-forms/index.html
@@ -5,8 +5,30 @@
   </head>
   <body>
     <h1>Coding Form!</h1>
-    <label for="email">Email</label>
-    <input type="email" id="email" size="30" required />
-    Why is coding cool
+    <form>
+      <label for="email">Email</label><br />
+      <input type="email" id="email" />
+      <p>Why is coding cool</p>
+      <select name="answers">
+        <option value="default">Select an option</option>
+        <option value="first">Because it's interesting!</option>
+        <option value="second">Because it's fun!</option>
+        <option value="third">Because it's powerful!</option>
+      </select>
+      <p>Favorite Language (Choose One)</p>
+
+      <input type="radio" id="HTML" value="html" /><label for="html"
+        >HTML</label
+      >
+      <input type="radio" id="CSS" /><label for="html">CSS</label>
+      <input type="radio" id="JavaScript" /><label for="html">JavaScript</label>
+      <p>Would you like to sign up for more information?</p>
+      <input type="checkbox" id="signup" name="signup" value="signup" />
+      <label for="signup"> Sign me up!</label><br />
+      <p>Comments</p>
+      <textarea id="comments" name="comments" rows="5" cols="33"></textarea
+      ><br />
+      <input type="submit" value="Submit" />
+    </form>
   </body>
 </html>
