Put beautiful inside <em> tag.

--- a/html-block-and-inline/index.html
+++ b/html-block-and-inline/index.html
@@ -9,8 +9,8 @@
     <p>Price: <del>$19.99</del> $14.99</p>
 
     <p>
-      Part of our new Americana collection, this beautiful blue is already a
-      customer favorite!
+      Part of our new Americana collection, this <em>beautiful</em> blue is
+      already a customer favorite!
     </p>
 
     <p>Enjoy complete <strong>Freedom of Movement!</strong></p>
