Fixed inline styles issues, and moved everything into styles.css

--- a/css-brochure-form/index.html
+++ b/css-brochure-form/index.html
@@ -10,44 +10,34 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div style="width: 360px; margin: 0 auto"></div>
-    <h3>LEARN MORE</h3>
+    <div><h3>LEARN MORE</h3></div>
 
-    <div style="width: 360px; margin: 0 auto">
-      <div style="margin-bottom: 10px">
+    <div>
+      <div>
         <label for="email">COMPANY EMAIL</label>
-        <input
-          id="email"
-          type="text"
-          value="sally@company.co"
-          style="width: 120%" />
+        <input id="email" type="text" value="sally@company.co" />
       </div>
 
-      <div style="margin-bottom: 10px">
+      <div>
         <label for="name">NAME</label>
-        <input id="name" type="text" value="Sally Smith" style="width: 120%" />
+        <input id="name" type="text" value="Sally Smith" />
       </div>
 
-      <div style="margin-bottom: 10px">
+      <div>
         <label for="title">WHERE ARE YOU HIRING?</label>
-        <input
-          id="location"
-          type="text"
-          value="City, Country"
-          style="width: 120%" />
+        <input id="location" type="text" value="City, Country" />
       </div>
-
-      <div style="margin-bottom: 10px">
+      <div>
         <label for="number"
           >HOW MANY ENGINEERS ARE YOU HIRING IN THE NEXT 6 MONTHS?</label
         >
-        <select id="number" style="width: 120%">
+        <select id="number">
           <option selected>1-2 Engineers</option>
           <option>Category 1</option>
           <option>Category 2</option>
         </select>
       </div>
-      <button>SUBMIT</button>
+      <div class="submit"><button>SUBMIT</button></div>
     </div>
   </body>
 </html>
