--- a/es6-template-literals/index.html
+++ b/es6-template-literals/index.html
@@ -10,33 +10,26 @@
     <script>
       const number = 9200;
       const street = 'Irvine Center Drive';
-      const address = number + ' ' + street;
+      const address = `${number} ${street}`;
 
-      console.log(`LearningFuze: ${address}`);
+      console.log(`LearningFuze:`, address);
 
       const firstName = 'Uzair';
       const lastName = 'Ashraf';
       const age = 25;
 
-      const bio =
-        'My name is ' +
-        firstName +
-        ' ' +
-        lastName +
-        ' and I am ' +
-        age +
-        ' years old.';
+      const bio = `My name is ${firstName} ${lastName} and I am ${age} years old.`;
 
-      console.log(`Bio: ${bio}`);
+      console.log(`Bio:`, bio);
 
       const fruit = 'apple';
       const item = 'pen';
 
-      const applePen = fruit + item;
+      const applePen = `fruititem`;
 
       console.log('I have a', item);
       console.log('I have an', fruit);
-      console.log(`${applePen}`);
+      console.log(`applePen`);
     </script>
   </body>
 </html>
