made further corrections necessary to es6-template-literals.

--- a/es6-template-literals/index.html
+++ b/es6-template-literals/index.html
@@ -25,11 +25,11 @@
       const fruit = 'apple';
       const item = 'pen';
 
-      const applePen = `fruititem`;
+      const applePen = `${fruit}${item}`;
 
       console.log('I have a', item);
       console.log('I have an', fruit);
-      console.log(`applePen`);
+      console.log(applePen);
     </script>
   </body>
 </html>
